crates/ask_pete_researcher/output_utf8.txt
cargo :     Blocking 
waiting for file 
lock on package cache
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -Encoding 
utf8 output_utf8.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (    Blo   
 cking wa...n pac    
kage cache:Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
    Blocking waiting 
for file lock on 
package cache
    Blocking waiting 
for file lock on 
package cache
    Checking 
ask_pete_frontend 
v0.1.0 (C:\Users\Trin
ity\Documents\daydrea
m\Day_Dream\frontend)
warning: unused 
import: `crate::pages
::engine_cab_layout::
EngineCabLayout`
  --> frontend\src\ap
p.rs:13:5
   |
13 | use crate::pages
::engine_cab_layout::
EngineCabLayout;
   |     ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^
   |
   = note: `#[warn(un
used_imports)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: unused 
import: `StoryNode`
 --> frontend\src\pag
es\play_mode.rs:2:34
  |
2 | use common::exper
t::{StoryGraph, 
StoryNode};
  |                  
                
^^^^^^^^^

warning: unused 
variable: `history`
  --> frontend\src\pa
ges\play_mode.rs:19:1
0
   |
19 |     let 
(history, 
set_history) = signal
(Vec::<String>::new()
); // Log of events
   |          
^^^^^^^ help: if 
this is intentional, 
prefix it with an 
underscore: 
`_history`
   |
   = note: `#[warn(un
used_variables)]` 
(part of 
`#[warn(unused)]`) 
on by default

error[E0277]: the 
trait bound `std::str
ing::String: 
IntoParam` is not 
satisfied
  --> frontend\src\pa
ges\play_mode.rs:10:1
3
   |
10 |     pub id: 
String,
   |             
^^^^^^ the trait 
`IntoParam` is not 
implemented for 
`std::string::String`
   |
   = help: the trait 
`IntoParam` is 
implemented for `std:
:option::Option<T>`

For more information 
about this error, 
try `rustc --explain 
E0277`.
warning: 
`ask_pete_frontend` 
(lib) generated 3 
warnings
error: could not 
compile 
`ask_pete_frontend` 
(lib) due to 1 
previous error; 3 
warnings emitted
